--- a/app/src/main/res/layout/activity_hakkimizda.xml
+++ b/app/src/main/res/layout/activity_hakkimizda.xml
@@ -21,10 +21,10 @@
             android:layout_height="250dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/yenii" />
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -82,13 +82,6 @@
             app:shapeAppearanceOverlay="@style/circular"
             app:srcCompat="@drawable/vesikalik2" />
 
-        <ImageView
-            android:id="@+id/imageView29"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/papatya"
-            tools:layout_editor_absoluteX="199dp"
-            tools:layout_editor_absoluteY="202dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
@@ -171,9 +164,9 @@
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="368dp"
-        android:layout_height="116dp"
-        android:text="2020 yılında abla kardeş olarak başladığımız magazin ve içerik üreticiliği hayatımıza bugün sizlerle büyük bir aile olarak devam etmekdeyiz.Sizlerle birlikte büyüttüğümüz markamız için sizleri teşekkürü borç biliriz."
+        android:layout_width="382dp"
+        android:layout_height="wrap_content"
+        android:text="2020 yılında abla kardeş olarak başladığımız magazin ve içerik üreticiliği hayatımıza bugün sizlerle büyük bir aile olarak devam etmekdeyiz.Sizlerle birlikte büyüttüğümüz markamız için sizleri teşekkürü borç biliriz.Biz news magazin ajansı olarak sizler için hergün araştırmalar yapıp tarafınıza güvenilir ve tescillenmiş bilgileri sunuyoruz.En önemlisi de magazin haberlerimizi kesinlikle yasal,etik ve doğru yollardan yapıp,kanıtlarıyla beraber magazin haberleimizi tarafınıza iletiyoruz."
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="18dp"
@@ -182,5 +175,158 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+
+    <ImageView
+        android:id="@+id/imageView27"
+        android:layout_width="190dp"
+        android:layout_height="110dp"
+        android:paddingLeft="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/desen" />
+
+    <ImageView
+        android:id="@+id/imageView31"
+        android:layout_width="190dp"
+        android:layout_height="110dp"
+        android:paddingRight="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/desen2" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13">
+
+        <ImageView
+            android:id="@+id/imageView290"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView32"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+
+        <ImageView
+            android:id="@+id/imageView34"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView36"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+
+        <ImageView
+            android:id="@+id/imageView38"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView40"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+
+        <ImageView
+            android:id="@+id/imageView43"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView44"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingTop="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/textView13"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+
+        <ImageView
+            android:id="@+id/imageView46"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView47"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+
+        <ImageView
+            android:id="@+id/imageView48"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView49"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+
+        <ImageView
+            android:id="@+id/imageView51"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView52"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+
+        <ImageView
+            android:id="@+id/imageView53"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatya" />
+
+        <ImageView
+            android:id="@+id/imageView54"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingBottom="5dp"
+            app:srcCompat="@drawable/papatyagri" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
